# SauceMall-Monitor

./: .env  .gitignore  README.md  app.py  docker-compose.yml  index.html  locustfile.py  main.py  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: ci.yml
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 11224f08430b441d.json  1291213f0637a129.txt  18aaa240fb404fcc.json  1e2cc8b1612b3d88.json  1e997c4071a225d8.json  222b9b00ab10edfd.txt  2546b6f783831b42.json  2b758a7fd798f1a6.txt  3172a8268941354a.txt  3ab393114a13430.txt  414bdc46372ef36a.json  48394aff5b60f894.json  484c57b853c74c9d.json  52a198eadc39899c.json  536052b55c7cf1a5.json  673781c36cc1848e.txt  68e0ed6f8b2099bf.txt  696b93cdb92805e6.txt  6acfc933ede589f7.txt  74d4e5ba43b933e.json  76abb0f7154c0af3.json  79ca768ef13e55af.json  7beb0daa666ec91a.txt  879c669e9ea4ab15.txt  8b16fb08c743087a.txt  8c91f6a926179813.txt  94ab9aac193548f9.json  965f88688088b11a.txt  971845500264d095.txt  985ca4ace28bd645.json  99820eb8f9b5a012.json  99913bed8ede0e5.json  9dd585939ec0ee2.json  a019695808d9f838.txt  a7473818acad4d92.txt  b932a73acf98a721.json  b95303772b575f38.txt  (+16 more)
database/: db_manager.py
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
pages/: base_page.py  inventory_page.py  login_page.py
tests/: conftest.py  test_api_advanced.py  test_e2e.py
utils/: logger.py  notification.py
widgets/: behaviors.json  duration-trend.json  duration.json  severity.json  status-chart.json  summary.json
(+201 files in other folders)
